--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <!-- <link rel="stylesheet" href="all.css"> -->
     <!-- Link JS Sheet -->
     <!-- Jquery cdn -->
-    <script src="https://s3.amazonaws.com/myadvobuck/static/libs/typed.min.js"></script>
+<!--     <script src="https://s3.amazonaws.com/myadvobuck/static/libs/typed.min.js"></script> -->
     <!-- <script src="index.js"></script> -->
 </head>
 
@@ -397,6 +397,6 @@
         }
         
         </script>
-    <script src="https://s3.amazonaws.com/myadvobuck/static/libs/typed.min.js"></script>
+<!--     <script src="https://s3.amazonaws.com/myadvobuck/static/libs/typed.min.js"></script> -->
 </body>
 </html>
